[package]
name = "rustino-sstable"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { version = "52", features = ["prettyprint"] }
parquet = { version = "52", features = ["arrow"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
apache-avro = "0.21.0"
bloomfilter = "1"
tempfile = "3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
